--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 /Design Patterns/ObserverPattern/nbproject/private/
 /Design Patterns/ObserverPattern/build/
 /Design Patterns/ObserverPattern/dist/
+/Design Patterns/DecoratorPattern/nbproject/private/
+/Design Patterns/DecoratorPattern/dist/
+/Design Patterns/DecoratorPattern/build/
+/Design Patterns/StrategyPattern/nbproject/private/
+/Design Patterns/StrategyPattern/build/
+/Design Patterns/StrategyPattern/dist/
+/Design Patterns/CommandPattern/nbproject/private/
+/Design Patterns/CommandPattern/build/
+/Design Patterns/CommandPattern/dist/
+/Design Patterns/TempleteMethod/nbproject/private/
